--- a/sass/_elements.scss
+++ b/sass/_elements.scss
@@ -597,10 +597,9 @@ pre, textarea {
 
 /* Editable Elements */
 .editable {
-	background:rgba(0,0,0,0.4);
 	color: rgba(255,255,255,0.3);
-	@include modular_scale("margin",2 0);
-	@include modular_scale("padding",4 0);
+	@include modular_scale("margin",0);
+	@include modular_scale("padding",2 0);
 	-webkit-user-modify: read-write;
 	   -moz-user-modify: read-write;
 			user-modify: read-write;
@@ -609,7 +608,7 @@ pre, textarea {
 	@include prefix("transition", color 0.3s ease);
 	
 	&:focus {
-		color:#fff;
+		color: rgba(255,255,255,0.8);
 	}
 }
 
