--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -3,11 +3,11 @@ body {
 }
 
 header {
-	background:#f2726d;
+	background:colors(pink);
 	background:rgba(242,114,109,0.85);
 	border-bottom:solid 1px #e66c67;
 	left:0px;
-	padding:0;
+	@include modular_scale("padding",0 3);
 	position:fixed;
 	right:0px;
 	top:0px;
@@ -18,12 +18,20 @@ header {
 		background-size:54px 30px;
 		float:left;
 		height:60px;
-		width:100px;
+		width:80px;
 		
 		&:hover {
 			background-color:rgba(255,255,255,0.2);
 		}
 	}
+}
+
+main {
+	min-height:400px;
+}
+
+menu {
+	float:right;
 }
 
 nav {
@@ -48,5 +56,4 @@ footer {
 	border-top:solid 1px #eee;
 	clear:both;
 	height:300px;
-	margin:100px 0 0 0;
 }
