--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -1,9 +1,9 @@
 #listing,
 #register {
-	@include modular_scale("padding",20 0 40 0);
+	@include modular_scale("padding",30 0 40 0);
 }
 
 #register {
-	background:colors(pink);
-	color:colors(white);
+	background:colors(white);
+	color:colors(black);
 }
