--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -6,10 +6,10 @@
 	src: local("ProximaNova-Regular"),
 		 local("ProximaNova Regular"),
 		 local("Proxima Nova Regular"),
-	     url("fonts/proximanova-regular-webfont.otf") format("opentype"),
-	     url("fonts/proximanova-regular-webfont.ttf") format("truetype"),
-	     url("fonts/proximanova-regular-webfont.woff") format("woff"),
-	     url("fonts/proximanova-regular-webfont.svg#proximanova-regular-webfont") format("svg");
+	     url("../fonts/proximanova-regular-webfont.otf") format("opentype"),
+	     url("../fonts/proximanova-regular-webfont.ttf") format("truetype"),
+	     url("../fonts/proximanova-regular-webfont.woff") format("woff"),
+	     url("../fonts/proximanova-regular-webfont.svg#proximanova-regular-webfont") format("svg");
 	font-weight:400;
 	font-style:normal;
 }
@@ -19,10 +19,10 @@
 	src: local("ProximaNova-Bold"),
 		 local("ProximaNova Bold"),
 		 local("Proxima Nova Bold"),
-	     url("fonts/proximanova-bold-webfont.otf") format("opentype"),
-	     url("fonts/proximanova-bold-webfont.ttf") format("truetype"),
-	     url("fonts/proximanova-bold-webfont.woff") format("woff"),
-	     url("fonts/proximanova-bold-webfont.svg#iefix") format("svg");
+	     url("../fonts/proximanova-bold-webfont.otf") format("opentype"),
+	     url("../fonts/proximanova-bold-webfont.ttf") format("truetype"),
+	     url("../fonts/proximanova-bold-webfont.woff") format("woff"),
+	     url("../fonts/proximanova-bold-webfont.svg#iefix") format("svg");
 	font-weight:700;
 	font-style:normal;
 }
@@ -67,10 +67,10 @@
 	src: local("ProximaNova-Light"),
 		 local("ProximaNova Light"),
 		 local("Proxima Nova Light"),
-	     url("fonts/proximanova-light-webfont.otf") format("opentype"),
-	     url("fonts/proximanova-light-webfont.ttf") format("truetype"),
-	     url("fonts/proximanova-light-webfont.woff") format("woff"),
-	     url("fonts/proximanova-light-webfont.svg#iefix") format("svg");
+	     url("../fonts/proximanova-light-webfont.otf") format("opentype"),
+	     url("../fonts/proximanova-light-webfont.ttf") format("truetype"),
+	     url("../fonts/proximanova-light-webfont.woff") format("woff"),
+	     url("../fonts/proximanova-light-webfont.svg#iefix") format("svg");
 	font-weight:200;
 	font-style:normal;
 }
@@ -82,10 +82,10 @@
 	src: local("ProximaNova-Semibold"),
 		 local("ProximaNova Semibold"),
 		 local("Proxima Nova Semibold"),
-	     url("fonts/proximanova-semibold-webfont.otf") format("opentype"),
-	     url("fonts/proximanova-semibold-webfont.ttf") format("truetype"),
-	     url("fonts/proximanova-semibold-webfont.woff") format("woff"),
-	     url("fonts/proximanova-semibold-webfont.svg#iefix") format("svg");
+	     url("../fonts/proximanova-semibold-webfont.otf") format("opentype"),
+	     url("../fonts/proximanova-semibold-webfont.ttf") format("truetype"),
+	     url("../fonts/proximanova-semibold-webfont.woff") format("woff"),
+	     url("../fonts/proximanova-semibold-webfont.svg#iefix") format("svg");
 	font-weight:600;
 	font-style:normal;
 }
@@ -95,10 +95,10 @@
 	src: local("ProximaNova-Extrabold"),
 		 local("ProximaNova Extrabold"),
 		 local("Proxima Nova Extrabold"),
-	     url("fonts/proximanova-extrabold-webfont.otf") format("opentype"),
-	     url("fonts/proximanova-extrabold-webfont.ttf") format("truetype"),
-	     url("fonts/proximanova-extrabold-webfont.woff") format("woff"),
-	     url("fonts/proximanova-extrabold-webfont.svg#iefix") format("svg");
+	     url("../fonts/proximanova-extrabold-webfont.otf") format("opentype"),
+	     url("../fonts/proximanova-extrabold-webfont.ttf") format("truetype"),
+	     url("../fonts/proximanova-extrabold-webfont.woff") format("woff"),
+	     url("../fonts/proximanova-extrabold-webfont.svg#iefix") format("svg");
 	font-weight:800;
 	font-style:normal;
 }
@@ -108,10 +108,10 @@
 	src: local("ProximaNova-Black"),
 		 local("ProximaNova Black"),
 		 local("Proxima Nova Black"),
-	     url("fonts/proximanova-black-webfont.otf") format("opentype"),
-	     url("fonts/proximanova-black-webfont.ttf") format("truetype"),
-	     url("fonts/proximanova-black-webfont.woff") format("woff"),
-	     url("fonts/proximanova-black-webfont.svg#iefix") format("svg");
+	     url("../fonts/proximanova-black-webfont.otf") format("opentype"),
+	     url("../fonts/proximanova-black-webfont.ttf") format("truetype"),
+	     url("../fonts/proximanova-black-webfont.woff") format("woff"),
+	     url("../fonts/proximanova-black-webfont.svg#iefix") format("svg");
 	font-weight:900;
 	font-style:normal;
 }
@@ -120,10 +120,10 @@
 	font-family:"Playfair-Display";
 	src: local("playfairdisplay-regular-webfont"),
 	     local("Playfair Display Regular"),
-	     url("fonts/playfairdisplay-regular-webfont.otf") format("opentype"),
-	     url("fonts/playfairdisplay-regular-webfont.ttf") format("truetype"),
-	     url("fonts/playfairdisplay-regular-webfont.woff") format("woff"),
-	     url("fonts/playfairdisplay-regular-webfont.svg#iefix") format("svg");
+	     url("../fonts/playfairdisplay-regular-webfont.otf") format("opentype"),
+	     url("../fonts/playfairdisplay-regular-webfont.ttf") format("truetype"),
+	     url("../fonts/playfairdisplay-regular-webfont.woff") format("woff"),
+	     url("../fonts/playfairdisplay-regular-webfont.svg#iefix") format("svg");
 	font-weight:400;
 	font-style:normal;
 }
@@ -132,10 +132,10 @@
 	font-family:"Playfair-Display";
 	src: local("playfairdisplay-bold-webfont"),
 	     local("Playfair Display Bold"),
-	     url("fonts/playfairdisplay-bold-webfont.otf") format("opentype"),
-	     url("fonts/playfairdisplay-bold-webfont.ttf") format("truetype"),
-	     url("fonts/playfairdisplay-bold-webfont.woff") format("woff"),
-	     url("fonts/playfairdisplay-bold-webfont.svg#iefix") format("svg");
+	     url("../fonts/playfairdisplay-bold-webfont.otf") format("opentype"),
+	     url("../fonts/playfairdisplay-bold-webfont.ttf") format("truetype"),
+	     url("../fonts/playfairdisplay-bold-webfont.woff") format("woff"),
+	     url("../fonts/playfairdisplay-bold-webfont.svg#iefix") format("svg");
 	font-weight:700;
 	font-style:normal;
 }
@@ -144,10 +144,10 @@
 	font-family:"Playfair-Display";
 	src: local("playfairdisplay-black-webfont"),
 	     local("Playfair Display Black"),
-	     url("fonts/playfairdisplay-black-webfont.otf") format("opentype"),
-	     url("fonts/playfairdisplay-black-webfont.ttf") format("truetype"),
-	     url("fonts/playfairdisplay-black-webfont.woff") format("woff"),
-	     url("fonts/playfairdisplay-black-webfont.svg#iefix") format("svg");
+	     url("../fonts/playfairdisplay-black-webfont.otf") format("opentype"),
+	     url("../fonts/playfairdisplay-black-webfont.ttf") format("truetype"),
+	     url("../fonts/playfairdisplay-black-webfont.woff") format("woff"),
+	     url("../fonts/playfairdisplay-black-webfont.svg#iefix") format("svg");
 	font-weight:800;
 	font-style:normal;
 }
@@ -235,8 +235,33 @@ h5 {
 	letter-spacing:-0.020em;
 }
 
-@media only screen and (min-width: 0px) and (max-width: 760px) {
-
+@include breakpoint(mobile) {
+	h1, h2, h3, h4, h5 { font-weight:700; text-indent:-2px; }
+	h1 { 
+		@include modular_scale("font-size",9); 
+		@include modular_scale("line-height",8); 
+		letter-spacing:-0.020em;
+	}
+	h2 { 
+		@include modular_scale("font-size",9); 
+		@include modular_scale("line-height",7);
+		letter-spacing:-0.020em;
+	}
+	h3 { 
+		@include modular_scale("font-size",7); 
+		@include modular_scale("line-height",6);
+		letter-spacing:-0.020em;
+	}
+	h4 { 
+		@include modular_scale("font-size",5); 
+		@include modular_scale("line-height",5);
+		letter-spacing:-0.020em;
+	}
+	h5 { 
+		@include modular_scale("font-size",4); 
+		@include modular_scale("line-height",4);
+		letter-spacing:-0.020em;
+	}
 }
 
 .semi { font-weight:weight(semibold); }
