--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -18,6 +18,12 @@
 	   -moz-box-sizing: border-box; 
 			box-sizing: border-box;	
 }
+
+@include breakpoint(mobile) {
+	.wide-container {
+		@include modular_scale("padding", 0 2);
+	}
+}
 .outer-container {
 	height:100%;
 	margin:0 auto;
@@ -108,6 +114,12 @@
 .fluff { @include modular_scale("padding", 4); }
 	.fluff-vertical { @include modular_scale("padding", 4 0); }
 	.fluff-horizontal { @include modular_scale("padding", 0 4); }
+	
+@include breakpoint(mobile){
+	.fluff { @include modular_scale("padding", 2 0); }
+		.fluff-vertical { @include modular_scale("padding", 4 0); }
+		.fluff-horizontal { @include modular_scale("padding", 0); }
+}
 
 .push_2 { left:50%; }
 .push_3 { left:33.333%; }
