--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -1,5 +1,5 @@
 body {
-	background:#f6f6f6;
+	background:#fff;
 }
 
 header {
@@ -32,6 +32,17 @@ main {
 
 menu {
 	float:right;
+	
+	a {
+		color:#fff;
+		display:inline-block;
+		@include modular_scale("padding",4 3);
+		
+		&:hover {
+			background:rgba(255,255,255,0.2);
+			color:#fff;
+		}
+	}
 }
 
 nav {
@@ -61,5 +72,11 @@ footer {
 	background:#fff;
 	border-top:solid 1px #eee;
 	clear:both;
-	height:300px;
+	@include modular_scale("padding",20 0);
+	
+	a {
+		color:#999;
+		display:block;
+		@include modular_scale("font-size",4);
+	}
 }
