--- a/sass/_elements.scss
+++ b/sass/_elements.scss
@@ -68,6 +68,7 @@ input::-moz-focus-inner {
 }
 
 .black-outline {
+	background:transparent;
 	border:solid 1px colors(black);
 	color:colors(black);
 	
@@ -211,17 +212,23 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="month"] {
 	border:solid 1px #ccc;
-	@include modular_scale("font-size", 5);
+	@include modular_scale("font-size", 4);
+	font-weight:weight(semibold);
 	@include modular_scale("margin", 1 0);
 	@include modular_scale("padding", 3);
 	width:100%;
 	-webkit-background-clip: padding-box;
 	   -moz-background-clip: padding-box;
 			background-clip: padding-box;
-	-webkit-border-radius: 3px;
-	   -moz-border-radius: 3px;
-			border-radius: 3px;
+	@include prefix('border-radius',5px);
+	@include prefix("font-smoothing", "antialiased");
 }
+
+::-webkit-input-placeholder{color:#999;}
+:-moz-placeholder{color:#999;}
+::-moz-placeholder{color:#999;}
+:-ms-input-placeholder{color:#999;}
+
 
 .dark-theme {
 	input[type="text"], 
@@ -394,18 +401,18 @@ input[type="checkbox"] + label:before {
 }
 
 input[type="checkbox"]:active + label:before, input[type="checkbox"]:checked:active + label:before {
-	border:solid 1px #adb8c0;
-	color:#99a1a7;
+	border:solid 1px colors(black);
+	color:colors(black);
 }
 
 input[type="checkbox"]:checked + label:before {
-	border:solid 1px #397ca0;
-	background:#397ca0 url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20baseProfile%3D%22tiny%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2216%22%20height%3D%2216%22%3E%3Cpath%20fill%3D%22%23fff%22%20d%3D%22M13.483%201.992l-7.186%207.066-3.778-3.715-2.518%202.475%205.037%204.954%201.259%201.237%209.704-9.541-2.518-2.476z%22/%3E%3C/svg%3E') no-repeat center center;
+	border:solid 1px colors(black);
+	background:colors(black) url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20baseProfile%3D%22tiny%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2216%22%20height%3D%2216%22%3E%3Cpath%20fill%3D%22%23fff%22%20d%3D%22M13.483%201.992l-7.186%207.066-3.778-3.715-2.518%202.475%205.037%204.954%201.259%201.237%209.704-9.541-2.518-2.476z%22/%3E%3C/svg%3E') no-repeat center center;
 	background-size:10px 10px;
 }
 
 input[type="radio"] + label:before {
-	background:#397ca0;
+	background:colors(black);
 	border:solid 1px #ddd;
 	content:"";
 	display:inline-block;
@@ -425,8 +432,8 @@ input[type="radio"] + label:before {
 }
 
 input[type="radio"]:checked + label:before {
-	border: solid 1px #397ca0;
-  	background: #397ca0;
+	border: solid 1px colors(black);
+  	background: colors(black);
   	box-shadow: inset 0 0 0 3px #fff;
 }
 
