--- a/sass/popup.scss
+++ b/sass/popup.scss
@@ -9,14 +9,12 @@ body {
 article {
 	.branding {
 		display:block;
-		outline:solid 1px blue;
 		margin:0;
 	}
 
 	#wrapper {
 		padding:1px 10px;
 		position:relative;
-		outline:solid 1px red;
 	}
 }
 
@@ -50,4 +48,9 @@ label {
 			color:#999;
 		}
 	}
+}
+
+#capture,
+#hidden-data {
+
 }
