--- a/sass/_elements.scss
+++ b/sass/_elements.scss
@@ -220,6 +220,12 @@ textarea {
 	}
 }
 
+.hide {
+	display:none;
+	opacity:0;
+	@include prefix('transition', all 0.3s ease);
+}
+
 /* Inputs */
 input[type="text"], 
 input[type="password"],
