--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -63,7 +63,7 @@
 }
 
 @mixin prefix($property, $value) {
-	-webkit-#{$property}: $value; 
-	   -moz-#{$property}: $value;
-			#{$property}: $value;
+  @each $vendor in ('-webkit-', '-moz-', '-ms-', '-o-', '') {
+    #{$vendor}#{$property}: #{$value};
+  }
 }
