--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -63,6 +63,126 @@ nav {
 	}
 }
 
+body.open {
+	
+	.overlay {
+		opacity:1;
+		visibility:visible;
+		
+		.modal {
+			opacity:1;
+
+			.container {
+				@include prefix('transform',scale(1));
+			}
+		}
+	}
+
+}
+
+.overlay{
+	background:rgba(0,0,0,0.5);
+	bottom:0;
+	left:0;
+	opacity:0;
+	position:fixed;
+	right:0;
+	top:0;
+	visibility:hidden;
+	z-index:99999;
+	
+	.modal {
+		display:inline-block;
+		left: 50%;
+		min-width:240px;
+		opacity:0;
+		position:absolute;
+		top: 50%;
+		width:300px;
+		@include prefix('transition', all 0.5s ease);
+		@include prefix('transform',translate(-50%, -50%));
+
+		.close-modal {
+			color:colors(white);
+			position:absolute;
+			right:4px;
+			top:4px;
+			@include prefix('transform', rotate(45deg));
+		}
+
+		.container {
+			background: colors(white) url(../img/layout/snapme_brand_logo_white.png) no-repeat center 25px;
+			background-size:100px 56px;
+			margin:0 auto;
+			padding:0;
+			@include prefix('transform',scale(0.7));
+			@include prefix('transition', all 0.5s ease);
+			@include prefix('box-shadow', 0px 1px 10px 1px rgba(0,0,0,0.5));
+
+			form {
+				margin:0; 
+
+				input[type="submit"] {
+					margin:0 auto;
+					position:relative;
+					left:50%;
+					@include prefix('transform', translate(-50%, 0%));
+				}
+
+				input[type="text"],
+				input[type="password"] {
+					border-radius:0;
+					border:none;
+					border-top:solid 1px #ddd;
+					@include modular_scale("font-size", 5);
+					font-weight:weight(book);
+					margin:0;
+				}
+
+				input[type="password"] {
+					border-bottom:solid 1px #ddd;
+				}
+
+				input[type="submit"] {
+					background:colors(pink);
+					border-radius:0;
+					@include modular_scale("font-size", 5);
+					@include modular_scale("line-height", 12);
+					width:100%;
+				}
+
+				label {
+					@include modular_scale("font-size", 4);
+					@include modular_scale("margin",0);
+				}
+
+				.space {
+					@include modular_scale("padding",3);
+				}
+
+				.new {
+					background:#eee;
+					@include modular_scale("font-size", 3.5);
+					@include modular_scale("line-height", 4);
+					@include modular_scale("padding",3);
+					text-align:left;
+				}
+
+				.forgot {
+					float:right;
+					@include modular_scale("font-size", 3);
+					@include modular_scale("margin",0);
+					@include modular_scale("padding",3);
+					position:absolute;
+					@include modular_scale("right",0);
+				}
+			}
+		}
+	}
+}
+
+
+
 footer {
 	background:#fff;
 	border-top:solid 1px #eee;
