--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -152,6 +152,16 @@
 			@include prefix('transition', all 0.5s ease);
 		}
 	}
+	
+	a.home {
+		background:colors(white);
+		color:#999;
+		display:block;
+		@include modular_scale("height",4);
+		font-weight:weight(semibold);
+		@include modular_scale("padding",4 0 7 0);
+		text-align:center;
+	}
 }
 
 .keywords {
