Switch to API's

--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -1,8 +1,9 @@
 #listing,
 #register,
 #guide,
-#snap {
-	@include modular_scale("padding",14 0 50 0);
+#snap,
+#home {
+	@include modular_scale("padding",14 0 20 0);
 }
 
 #register {
