--- a/sass/_elements.scss
+++ b/sass/_elements.scss
@@ -166,6 +166,13 @@ form label {
 	width:16px;
 }
 
+.icons-tiny {
+	font-size:24px;
+	line-height:12px;
+	top:1px;
+	width:12px;
+}
+
 .icons-small {
 	font-size:32px;
 	line-height:16px;
@@ -194,6 +201,7 @@ form label {
 	line-height:16px;
 	margin:0 4px 0 0;
 	position:relative;
+	top:2px;
 	width:16px;
 }
 
@@ -684,47 +692,28 @@ pre, textarea {
 
 /* Tabs */
 .tabs {
-	border-bottom:solid 1px #e6e6e6;
 	list-style-type:none;
+	font-weight:weight(regular);
 	margin:0;
 	padding:0;
-	text-align:center;
 	
 	li {
-		display:inline-block;
+		float:left;
 		list-style-type:none;
 	}
 	
 	a {
-		color:#999;
+		color:#ccc;
 		display:block;
-		margin:0 0 -1px 0;
-		padding:12px 24px;
+		@include modular_scale("padding", 3 5 3 0);
 		
 		&:hover {
-			border-bottom:solid 1px #397CA0;
-			color:#397CA0;
+			color:colors(white);
 		}
 	}
 	
 	.active {
-		color:#000;
-		border-bottom:solid 1px #000;
-	}
-}
-
-.dark-theme {
-	.tabs {
-		border-bottom:solid 1px #000;
-		
-		a {
-			
-		}
-		
-		.active {
-			color:#fff;
-			border-bottom:solid 1px #fff;
-		}
+		color:#fff;
 	}
 }
 
