--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -1,12 +1,12 @@
 /* Reset */
-body,html,div,blockquote,img,label,p,h1,h2,h3,h4,h5,h6,pre,ul,ol,li,dialog,dl,dt,dd,form,a,fieldset,input,th,td,header,footer,article,section,nav,menu,main,hgroup,aside{border:0;margin:0;outline:0;padding:0;list-style-type:none}
+body,html,div,blockquote,img,label,p,h1,h2,h3,h4,h5,h6,pre,ul,ol,li,dialog,dl,dt,dd,form,a,fieldset,input,th,td,header,footer,article,section,nav,menu,main,hgroup,aside,search{border:0;margin:0;outline:0;padding:0;list-style-type:none}
 :focus{outline:0}a:link,a:active,a:hover,a:visited{text-decoration:none}
 
 /* Helpers */
 img{display:block;margin:0;padding:0}
 
 /* HTML5 */
-article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section{display:block}
+article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,search{display:block}
 audio,canvas,video{display:inline-block;*display:inline;*zoom:1}
 audio:not([controls]){display:none}
 
