--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -37,6 +37,7 @@
 	-webkit-box-sizing: border-box; 
 	   -moz-box-sizing: border-box; 
 			box-sizing: border-box;
+			@include prefix('transition',opacity 0.3s ease);
 }
 
 .inner-container { 
